<resources>
    <string name="app_name">Android Learning</string>
    <string name="tvTitle">Welcome to Android</string>
    <string name="etUserName_hint">Enter User Name</string>
    <string name="etPassword_hint">Enter Password</string>
    <string name="btnLogin">Log In</string>
    <string name="btnClear">Clear</string>
    <string name="btnRegister">Register</string>
    <string name="btnBack">Back</string>
    <string name="rbfemale">Female</string>
    <string name="rbmale">Male</string>
    <string name="cb24hours">24/7 Hours</string>
    <string name="cb8Hours">8 Hours</string>
    <string name="email">Email</string>
    <string name="re_enter_password">Re-enter Password</string>

    <string name="btn0">0</string>
    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="btn7">7</string>
    <string name="btn8">8</string>
    <string name="btn9">9</string>

    <string name="btnplus">+</string>
    <string name="btnminus">-</string>
    <string name="btndivide">÷</string>
    <string name="btnmultiply">×</string>
    <string name="btnplusminus">+/-</string>
    <string name="btndot">.</string>
    <string name="btnequal">=</string>
    <string name="btnce">CE</string>
    <string name="btnc">C</string>
    <string name="btnback">Back</string>

    <string name="btnProductAdd">Add</string>
    <string name="btnDetail">Details</string>
    <string-array name="country">
        <item>Select Country</item>
        <item>Turkey</item>
        <item>Germany</item>
        <item>Spain</item>
        <item>Itlay</item>
        <item>Romania</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>