<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ActivityCalculator">

       <TextView
           android:id="@+id/tvhistory"
           android:layout_width="match_parent"
           android:layout_height="68dp"
           android:gravity="end|center_vertical"
           android:paddingRight="10dp"
           android:textAlignment="textEnd"
           android:textSize="24dp" />

       <TextView
           android:id="@+id/tvresult"
           android:layout_width="match_parent"
           android:layout_height="122dp"
           android:focusableInTouchMode="false"
           android:freezesText="true"
           android:gravity="end|center_vertical"
           android:layoutDirection="ltr"
           android:paddingRight="10dp"
           android:text="0"
           android:textAlignment="textEnd"
           android:textSize="40sp"
           android:textStyle="bold" />

       <GridLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:background="@color/white"
           android:columnCount="4"
           android:rowCount="5">


              <!--       row 1-->
              <Button
                  android:id="@+id/btnce"
                  android:layout_width="0dp"
                  android:layout_height="0dp"
                  android:layout_row="0"
                  android:layout_rowWeight="1"
                  android:layout_column="0"
                  android:layout_columnWeight="1"
                  android:layout_margin="2dp"
                  android:background="@drawable/btn_bg2"
                  android:text="@string/btnce"
                  android:textColor="@color/mycolor"
                  android:textSize="24sp" />

              <Button
                  android:id="@+id/btnc"
                  android:layout_width="0dp"
                  android:layout_height="0dp"
                  android:layout_row="0"
                  android:layout_rowWeight="1"
                  android:layout_column="1"
                  android:layout_columnWeight="1"
                  android:layout_margin="2dp"
                  android:background="@drawable/btn_bg2"
                  android:text="@string/btnc"
                  android:textColor="@color/mycolor"
                  android:textSize="24sp" />

              <ImageButton
                  android:id="@+id/btnBackspace"
                  android:layout_width="0dp"
                  android:layout_height="0dp"
                  android:layout_row="0"
                  android:layout_rowWeight="1"
                  android:layout_column="2"
                  android:layout_columnWeight="1"

                  android:layout_margin="2dp"
                  android:background="@drawable/btn_bg2"
                  android:padding="50dp"
                  android:scaleType="center"
                  android:src="@drawable/btn_backspace"
                  android:text="@string/btnback"
                  android:textColor="@color/mycolor"
                  android:textSize="24sp" />

              <Button
                  android:id="@+id/btndivide"
                  android:layout_width="0dp"
                  android:layout_height="0dp"
                  android:layout_row="0"
                  android:layout_rowWeight="1"
                  android:layout_column="3"
                  android:layout_columnWeight="1"
                  android:layout_margin="2dp"
                  android:background="@drawable/btn_bg2"
                  android:text="@string/btndivide"
                  android:textColor="@color/mycolor"
                  android:textSize="24sp" />


              <!--       row 2-->
              <Button
                  android:id="@+id/btn7"
                  android:layout_width="0dp"
                  android:layout_height="0dp"
                  android:layout_row="1"
                  android:layout_rowWeight="1"
                  android:layout_column="0"
                  android:layout_columnWeight="1"
                  android:layout_margin="2dp"
                  android:background="@drawable/btn_bg"
                  android:text="@string/btn7"
                  android:textColor="@color/mycolor"
                  android:textSize="24sp" />

              <Button
                  android:id="@+id/btn8"
                  android:layout_width="0dp"
                  android:layout_height="0dp"
                  android:layout_row="1"
                  android:layout_rowWeight="1"
                  android:layout_column="1"
                  android:layout_columnWeight="1"
                  android:layout_margin="2dp"
                  android:background="@drawable/btn_bg"
                  android:text="@string/btn8"
                  android:textColor="@color/mycolor"
                  android:textSize="24sp" />

              <Button
                  android:id="@+id/btn9"
                  android:layout_width="0dp"
                  android:layout_height="0dp"
                  android:layout_row="1"
                  android:layout_rowWeight="1"
                  android:layout_column="2"
                  android:layout_columnWeight="1"
                  android:layout_margin="2dp"
                  android:background="@drawable/btn_bg"
                  android:text="@string/btn9"
                  android:textColor="@color/mycolor"
                  android:textSize="24sp" />

              <Button
                  android:id="@+id/btnMultiply"
                  android:layout_width="0dp"
                  android:layout_height="0dp"
                  android:layout_row="1"
                  android:layout_rowWeight="1"
                  android:layout_column="3"
                  android:layout_columnWeight="1"
                  android:layout_margin="2dp"
                  android:background="@drawable/btn_bg2"
                  android:text="@string/btnmultiply"
                  android:textColor="@color/mycolor"
                  android:textSize="24sp" />


              <!--       row 3-->
              <Button
                  android:id="@+id/btn4"
                  android:layout_width="0dp"
                  android:layout_height="0dp"
                  android:layout_row="2"
                  android:layout_rowWeight="1"
                  android:layout_column="0"
                  android:layout_columnWeight="1"
                  android:layout_margin="2dp"
                  android:background="@drawable/btn_bg"
                  android:text="@string/btn4"
                  android:textColor="@color/mycolor"
                  android:textSize="24sp" />

              <Button
                  android:id="@+id/btn5"
                  android:layout_width="0dp"
                  android:layout_height="0dp"
                  android:layout_row="2"
                  android:layout_rowWeight="1"
                  android:layout_column="1"
                  android:layout_columnWeight="1"
                  android:layout_margin="2dp"
                  android:background="@drawable/btn_bg"
                  android:text="@string/btn5"
                  android:textColor="@color/mycolor"
                  android:textSize="24sp" />

              <Button
                  android:id="@+id/btn6"
                  android:layout_width="0dp"
                  android:layout_height="0dp"
                  android:layout_row="2"
                  android:layout_rowWeight="1"
                  android:layout_column="2"
                  android:layout_columnWeight="1"
                  android:layout_margin="2dp"
                  android:background="@drawable/btn_bg"
                  android:text="@string/btn6"
                  android:textColor="@color/mycolor"
                  android:textSize="24sp" />

              <Button
                  android:id="@+id/btnminus"
                  android:layout_width="0dp"
                  android:layout_height="0dp"
                  android:layout_row="2"
                  android:layout_rowWeight="1"
                  android:layout_column="3"
                  android:layout_columnWeight="1"
                  android:layout_margin="2dp"
                  android:background="@drawable/btn_bg2"
                  android:text="@string/btnminus"
                  android:textColor="@color/mycolor"
                  android:textSize="24sp" />


              <!--       row 4-->
              <Button
                  android:id="@+id/btn1"
                  android:layout_width="0dp"
                  android:layout_height="0dp"
                  android:layout_row="3"
                  android:layout_rowWeight="1"
                  android:layout_column="0"
                  android:layout_columnWeight="1"
                  android:layout_margin="2dp"
                  android:background="@drawable/btn_bg"
                  android:text="@string/btn1"
                  android:textColor="@color/mycolor"
                  android:textSize="24sp" />

              <Button
                  android:id="@+id/btn2"
                  android:layout_width="0dp"
                  android:layout_height="0dp"
                  android:layout_row="3"
                  android:layout_rowWeight="1"
                  android:layout_column="1"
                  android:layout_columnWeight="1"
                  android:layout_margin="2dp"
                  android:background="@drawable/btn_bg"
                  android:text="@string/btn2"
                  android:textColor="@color/mycolor"
                  android:textSize="24sp" />

              <Button
                  android:id="@+id/btn3"
                  android:layout_width="0dp"
                  android:layout_height="0dp"
                  android:layout_row="3"
                  android:layout_rowWeight="1"
                  android:layout_column="2"
                  android:layout_columnWeight="1"

                  android:layout_margin="2dp"
                  android:background="@drawable/btn_bg"
                  android:text="@string/btn3"
                  android:textColor="@color/mycolor"
                  android:textSize="24sp" />

              <Button
                  android:id="@+id/btnplus"
                  android:layout_width="0dp"
                  android:layout_height="0dp"
                  android:layout_row="3"
                  android:layout_rowWeight="1"
                  android:layout_column="3"
                  android:layout_columnWeight="1"

                  android:layout_margin="2dp"
                  android:background="@drawable/btn_bg2"
                  android:text="@string/btnplus"
                  android:textColor="@color/mycolor"
                  android:textSize="24sp" />


              <!--       row 5-->
              <Button
                  android:id="@+id/btnplusminus"
                  android:layout_width="0dp"
                  android:layout_height="0dp"
                  android:layout_row="4"
                  android:layout_rowWeight="1"
                  android:layout_column="0"
                  android:layout_columnWeight="1"

                  android:layout_margin="2dp"
                  android:background="@drawable/btn_bg"
                  android:text="@string/btnplusminus"
                  android:textColor="@color/mycolor"
                  android:textSize="24sp" />

              <Button
                  android:id="@+id/btn0"
                  android:layout_width="0dp"
                  android:layout_height="0dp"
                  android:layout_row="04"
                  android:layout_rowWeight="1"
                  android:layout_column="1"
                  android:layout_columnWeight="1"

                  android:layout_margin="2dp"
                  android:background="@drawable/btn_bg"
                  android:text="@string/btn0"
                  android:textColor="@color/mycolor"
                  android:textSize="24sp" />

              <Button
                  android:id="@+id/btndot"
                  android:layout_width="0dp"
                  android:layout_height="0dp"
                  android:layout_row="4"
                  android:layout_rowWeight="1"
                  android:layout_column="2"
                  android:layout_columnWeight="1"

                  android:layout_margin="2dp"
                  android:background="@drawable/btn_bg"
                  android:text="@string/btndot"
                  android:textColor="@color/mycolor"
                  android:textSize="24sp" />

              <Button
                  android:id="@+id/btnequal"
                  android:layout_width="0dp"
                  android:layout_height="0dp"
                  android:layout_row="4"
                  android:layout_rowWeight="1"
                  android:layout_column="3"
                  android:layout_columnWeight="1"
                  android:layout_margin="2dp"
                  android:background="@drawable/btn_bg2"
                  android:text="@string/btnequal"
                  android:textColor="@color/mycolor"
                  android:textSize="24sp" />
       </GridLayout>


</LinearLayout>